--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "Magenizr\\ResetUiBoomark\\": ""
+      "Magenizr\\ResetUiBookmarks\\": ""
     }
   }
 }
