--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "magenizr/magento2-resetuibookmarks",
   "description": "This Magento 2 module allows you to reset your UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on.",
   "type": "magento2-module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": [
     "OSL-3.0"
   ],
@@ -14,7 +14,7 @@
     }
   ],
   "require": {
-    "magento/framework": "^100|^101",
+    "magento/framework": "^100|^101|^102",
     "magento/module-backend": "^100|^101"
   },
   "repositories": [
